--- a/.slugignore
+++ b/.slugignore
@@ -1,16 +1,12 @@
-# === Large datasets and generated files ===
-/inputs/
-/jupyter_notebooks/
-/outputs/
-
-# === Python caches and notebooks ===
-__pycache__/
-.ipynb_checkpoints/
-
-# === Dev / local only ===
-venv/
-.env
-
-# === VCS and docs ===
-.git/
+inputs/cherryleaves_dataset/cherry-leaves/test/healthy/*
+inputs/cherryleaves_dataset/cherry-leaves/test/powdery_mildew/*
+inputs/cherryleaves_dataset/cherry-leaves/train/healthy/*
+inputs/cherryleaves_dataset/cherry-leaves/train/powdery_mildew/*
+inputs/cherryleaves_dataset/cherry-leaves/validation/healthy/*
+inputs/cherryleaves_dataset/cherry-leaves/validation/powdery_mildew/*
+attachments/*
+readme_images/*
 README.md
+.gitpod.dockerfile
+.gitpod.yml
+app_pages/__pycache__/*
