--- a/.slugignore
+++ b/.slugignore
@@ -11,3 +11,19 @@ README.md
 .gitpod.yml
 app_pages/__pycache__/*
 src/__pycache__
+*.ipynb
+*.csv
+*.parquet
+*.pt
+*.h5
+*.pb
+*.onnx
+__pycache__/
+.cache/
+.streamlit/cache/
+tests/
+docs/
+examples/
+.notebooks/
+data/
+models/
