--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,11 @@
-absl-py==2.3.1
-altair==5.5.0
-astunparse==1.6.3
-blinker==1.9.0
-cachetools==5.5.2
-click==8.3.0
-contourpy==1.3.3
-cycler==0.12.1
-flatbuffers==25.9.23
-fonttools==4.60.1
-gast==0.6.0
-gitdb==4.0.12
-GitPython==3.1.45
-google-pasta==0.2.0
-grpcio==1.75.1
-h5py==3.14.0
-joblib==1.4.2
-kaggle==1.7.4.5
-kaleido==0.2.1
-keras==3.11.3
-kiwisolver==1.4.9
-libclang==18.1.1
-Markdown==3.9
-matplotlib==3.8.0
-ml-dtypes==0.3.2
-namex==0.1.0
-narwhals==2.7.0
-numpy==1.26.1
-opt_einsum==3.4.0
-optree==0.17.0
-pandas==2.1.1
-Pillow==10.0.1
-plotly==5.17.0
-protobuf==4.25.8
-pyarrow==21.0.0
-pydeck==0.9.1
-pyparsing==3.2.5
-python-slugify==8.0.4
-pytz==2025.2
-scikit-learn==1.3.1
-scipy==1.16.2
-seaborn==0.13.2
-smmap==5.0.2
-streamlit==1.40.2
-tenacity==9.1.2
-tensorboard==2.16.2
-tensorboard-data-server==0.7.2
-tensorflow-cpu==2.16.1
-termcolor==3.1.0
-text-unidecode==1.3
-threadpoolctl==3.6.0
-toml==0.10.2
-tqdm==4.67.1
-tzdata==2025.2
-watchdog==6.0.0
-Werkzeug==3.1.3
-wrapt==1.17.3
+numpy
+pandas
+matplotlib
+seaborn
+plotly
+
+streamlit
+
+scikit-learn
+tensorflow-cpu
+keras
