--- a/.slugignore
+++ b/.slugignore
@@ -11,3 +11,34 @@ README.md
 .gitpod.yml
 app_pages/__pycache__/*
 src/__pycache__
+jupyter_notebooks/
+
+hypotheses_attachments/
+
+assets/
+
+outputs/v2/
+outputs/v3/
+
+app_pages/__pycache__/*
+__pycache__/
+
+src/__pycache__/*
+
+.pytest_cache/
+
+.vscode/
+
+.github/*
+
+.gitpod.dockerfile
+.gitpod.yml
+
+*.pyc
+*.pyo
+
+README.md
+*.log
+.DS_Store
+
+.gitignore
