--- a/.slugignore
+++ b/.slugignore
@@ -8,37 +8,8 @@ attachments/*
 readme_images/*
 README.md
 .gitpod.dockerfile
-.gitpod.yml
+README.md
+.gitignore
 app_pages/__pycache__/*
 src/__pycache__
-jupyter_notebooks/
-
-hypotheses_attachments/
-
-assets/
-
-outputs/v2/
-outputs/v3/
-
-app_pages/__pycache__/*
-__pycache__/
-
-src/__pycache__/*
-
-.pytest_cache/
-
-.vscode/
-
-.github/*
-
-.gitpod.dockerfile
-.gitpod.yml
-
-*.pyc
-*.pyo
-
-README.md
-*.log
-.DS_Store
-
-.gitignore
+/src/machine_learning/__pycache__
