--- a/.slugignore
+++ b/.slugignore
@@ -6,10 +6,9 @@ inputs/cherryleaves_dataset/cherry-leaves/validation/healthy/*
 inputs/cherryleaves_dataset/cherry-leaves/validation/powdery_mildew/*
 attachments/*
 readme_images/*
-README.md
+README.md*
 .gitpod.dockerfile
-README.md
-.gitignore
+.gitignore*
 app_pages/__pycache__/*
-src/__pycache__
-/src/machine_learning/__pycache__
+src/__pycache__*
+/src/machine_learning/__pycache__*
