--- a/.slugignore
+++ b/.slugignore
@@ -12,4 +12,6 @@ README.md*
 app_pages/__pycache__/*
 src/__pycache__*
 /src/machine_learning/__pycache__*
-hypotheses_attachments/
+hypotheses_attachments/*
+outputs/v2/*
+outputs/v3/*
