--- a/.slugignore
+++ b/.slugignore
@@ -1,17 +1,36 @@
-inputs/cherryleaves_dataset/cherry-leaves/test/healthy/*
-inputs/cherryleaves_dataset/cherry-leaves/test/powdery_mildew/*
-inputs/cherryleaves_dataset/cherry-leaves/train/healthy/*
-inputs/cherryleaves_dataset/cherry-leaves/train/powdery_mildew/*
-inputs/cherryleaves_dataset/cherry-leaves/validation/healthy/*
-inputs/cherryleaves_dataset/cherry-leaves/validation/powdery_mildew/*
-attachments/*
-readme_images/*
-README.md*
-.gitpod.dockerfile
-.gitignore*
+inputs/cherry_leaves_dataset/cherry-leaves/test/healthy/*
+inputs/cherry_leaves_dataset/cherry-leaves/test/powdery_mildew/*
+inputs/cherry_leaves_dataset/cherry-leaves/train/healthy/*
+inputs/cherry_leaves_dataset/cherry-leaves/train/powdery_mildew/*
+
+jupyter_notebooks/
+
+hypotheses_attachments/
+
+assets/
+
+outputs/v2/
+outputs/v3/
+
 app_pages/__pycache__/*
-src/__pycache__*
-/src/machine_learning/__pycache__*
-hypotheses_attachments/*
-outputs/v2/*
-outputs/v3/*
+__pycache__/
+
+src/__pycache__/*
+
+.pytest_cache/
+
+.vscode/
+
+.github/*
+
+.gitpod.dockerfile
+.gitpod.yml
+
+*.pyc
+*.pyo
+
+README.md
+*.log
+.DS_Store
+
+.gitignore
